Added search panel by name with name indexed
