# router/panelRouter.js
@@ -5,4 +5,5 @@ module.exports.init = function(apiRoutes) {
   const panelRoutes = express.Router();
   apiRoutes.use('/panel', panelRoutes);
   panelRoutes.get('/readFromXls', PanelController.readFromXls);
+  panelRoutes.get('/searchPanel', PanelController.searchPanel);
 };
